<resources>
    <string name="app_name">Focuso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="continue_button">Continue</string>
    <string name="skip">Skip</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="welcome_description">Let\'s dive into your account</string>
    <string name="welcome_title">Let\'s Get Started!</string>
    <string name="privacy_policy_terms_of_service">Privacy Policy • Terms of Service</string>
    <string name="continue_with_x">Continue with X</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="i_agree_to_focuso_terms_conditions">I agree to Focuso <font color="#F82C34"> Terms &amp; Conditions </font> </string>
    <string name="already_have_an_account">Already have an account?<font color="#F82C34"> Sign in </font></string>
    <string name="or_continue_with">or continue with</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_screen_description">Join thousands who are turning distractions into deep work.</string>
    <string name="sign_up_screen_title">Join Focuso Today! ⌛</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="sign_in_screen_title">Welcome Back! 👋🏻</string>
    <string name="sign_in_screen_description">Sign in to continue your journey of deep work. clear goals, and mindful productivity.</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ?<font color="#F82C34"> Sign up</font> </string>
    <string name="forgot_password_screen_description">Enter the email you used to sign up with Focuso We\'ll send you a one-time code to reset your password.</string>
    <string name="forgot_password_screen_title">Forgot Password? 🔑</string>
    <string name="send_otp_code">Send OTP Code</string>
    <string name="registered_email_address">Registered email address</string>
    <string name="OTP_screen_description">Enter the OTP code from your email to verify your identity.</string>
    <string name="OTP_screen_title">Enter OTP Code 🔐</string>
    <string name="resend_code">Resend code</string>
    <string name="resendCodeTimerText">You can resend the code in<font color="#F82C34"> x </font>seconds</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="create_new_password">Create new password</string>
    <string name="new_password_screen_description">Your new password must be at least 8 characters long. Avoid using the same one as before.</string>
    <string name="new_password_screen_title">Secure Your Account 🔒</string>
    <string name="save_new_password">Save New Password</string>
    <string name="password_update_screen_title">You\'re all set!</string>
    <string name="password_update_screen_description">Your password has been updated.</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_password">Password must be at least 8 characters long</string>
    <string name="please_agree_to_terms_and_conditions">You must agree to the Terms &amp; Conditions to continue.</string>
    <string name="coming_soon">This method is currently unavailable. Please try another option.</string>

</resources>