<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="28dp"
            android:paddingRight="28dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/OTP_screen_title"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/OTP_screen_description"
                android:textColor="@color/thinTextColor"
                android:textSize="16sp" />

            <com.chaos.view.PinView
                android:id="@+id/otp_code"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:cursorVisible="true"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@color/input_background"
                app:hideLineWhenFilled="false"
                app:itemCount="4"
                app:itemHeight="50dp"
                app:itemRadius="10dp"
                app:itemSpacing="20dp"
                app:itemWidth="70dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:padding="2dp"
                app:layout_constraintTop_toTopOf="parent">
            </com.chaos.view.PinView>

            <TextView
                android:id="@+id/resendCodeTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/resendCodeTimerText"
                android:textAlignment="center"
                android:textColor="@color/thinTextColor" />

            <TextView
                android:id="@+id/resendCodeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/resend_code"
                android:textAlignment="center"
                android:textColor="@color/thinTextColor" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>