<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment" >

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/privacy_policy_terms_of_service"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/privacy_policy">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="64dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/focuso_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/welcomeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:text="@string/welcome_title"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="@+id/app_logo"
                    app:layout_constraintStart_toStartOf="@+id/app_logo"
                    app:layout_constraintTop_toBottomOf="@+id/app_logo" />

                <TextView
                    android:id="@+id/welcomeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/welcome_description"
                    android:textColor="@color/thinTextColor"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/welcomeTitle"
                    app:layout_constraintStart_toStartOf="@+id/welcomeTitle"
                    app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continue_with_google_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/black"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/ic_google"
                    app:iconTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcomeDescription"
                    app:strokeColor="@color/gray"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continue_with_apple_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/continue_with_apple"
                    android:textColor="@color/black"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/ic_apple"
                    app:iconTint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/continue_with_google_button"
                    app:strokeColor="@color/gray"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continue_with_facebook_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/continue_with_facebook"
                    android:textColor="@color/black"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/ic_facebook"
                    app:iconTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/continue_with_apple_button"
                    app:strokeColor="@color/gray"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continue_with_x_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/continue_with_x"
                    android:textColor="@color/black"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/ic_x"
                    app:iconTint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/continue_with_facebook_button"
                    app:strokeColor="@color/gray"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/sign_up"
                    android:textColor="#ffffff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/continue_with_x_button" />

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="@string/sign_in"
                    android:textColor="@color/button_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>