<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="28dp"
            android:paddingRight="28dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/new_password_screen_title"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/new_password_screen_description"
                android:textColor="@color/thinTextColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/createPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:text="@string/create_new_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textColorHint="@color/gray"
                app:cursorColor="@color/colorPrimary"
                app:endIconMode="password_toggle"
                app:hintEnabled="false"
                app:hintTextColor="@android:color/transparent"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_background"
                    android:backgroundTint="@color/input_background"
                    android:hint="@string/password"
                    android:inputType="text|textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/confirmPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_new_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textColorHint="@color/gray"
                app:cursorColor="@color/colorPrimary"
                app:endIconMode="password_toggle"
                app:hintEnabled="false"
                app:hintTextColor="@android:color/transparent"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_background"
                    android:backgroundTint="@color/input_background"
                    android:hint="@string/password"
                    android:inputType="text|textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/saveNewPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveNewPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save_new_password"
        android:textColor="@color/always_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>